# youtube-dl-ffmpeg-updater-win

./: .gitignore  README.md  argparser.py  main.py  pyproject.toml  requirements.txt  updater.py
app/: banner.py  cli.py  constants.py  enums.py  exceptions.py  log.py  mappings.py  settings.py  utils.py
app/cli/: main.py
app/clients/: abstract.py  codexffmpeg.py  ytdl.py
app/clients/codex_ffmpeg/: client.py  models.py
app/core/: updater.py  zip_extractor.py
app/tasks/: abstract.py  codex.py  managers.py  validation.py  youtube_dl.py
core/: api.py  argparser.py  const.py  constants.py  enums.py  exceptions.py  extractor.py  log.py  main.py  managers.py  procs.py  settings.py  updater.py  utils.py
core/clients/: abstract.py  codexffmpeg.py  ytdl.py
core/tasks/: abstract.py  codex.py  extract.py  validation.py  youtube_dl.py  ytdl.py
tests/unit/: test_api.py
