[project]
name = "ffmpeg-updater-win"
version = "0.4.2"
description = "youtube-dl and ffmpeg binaries updater for Windows OS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "setuptools>=75.8.0",
    "typer>=0.15.1",
]

[dependency-groups]
lint = [
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
required-version = ">=0.9"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "ASYNC110",
    "COM812",
    "D100",
    "D103",
    "D107",
    "E501",
    "EM101",
    "EM102",
    "FBT001",
    "FBT002",
    "INP001",
    "ISC001",
    "PERF401",
    "PLR0913",
    "PTH103",
    "PTH110",
    "PTH112",
    "PTH123",
    "RUF012",
    "S110",
    "TRY003",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
