[project]
name = "ffmpeg-updater-win"
version = "0.4.2"
description = "youtube-dl and ffmpeg binaries updater for Windows OS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "packaging>=25.0",
    "setuptools>=75.8.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
required-version = ">=0.9"
extend-exclude = ["app/third_party/*"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "ASYNC109",
    "ASYNC110",
    "B008",
    "BLE001",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "E501",
    "EM101",
    "EM102",
    "FAST002",
    "FBT001",
    "FBT002",
    "FIX002",
    "INP001",
    "ISC001",
    "PERF401",
    "TD002",
    "TD003",
    "TRY003",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
